--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -74,15 +74,16 @@
 .banner__title{
   font-size: 54px;
   text-transform: uppercase;
-  letter-spacing: -5px;
   line-height: .9em;
   text-align: center;
   margin-top: 40px;
+  letter-spacing: -3px;
 }
 
 @media screen and (min-width: 480px){
   .banner__title{
     font-size: 72px;
+    letter-spacing: -4px;
   }
 }
 
@@ -95,6 +96,7 @@
 @media screen and (min-width: 1280px){
   .banner__title{
     font-size: 150px;
+    letter-spacing: -5px;
   }
 }
 
